--- a/FS_Lab/program 3/package.json
+++ b/FS_Lab/program 3/package.json
@@ -10,4 +10,14 @@
     "author": "Banuprasad",
     "license": "MIT"
   }
+
+------------------------------------------------------------------------------------------------------
+
+// Simplified
+{
+  "type": "module",
+  "scripts": {
+    "start": "node main.js"
+  }
+}
   
