--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignore macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Ignore macOS resource forks and metadata folders
+__MACOSX/
